--- a/index.html
+++ b/index.html
@@ -3,38 +3,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus 피드백 학습 + 재배 계획 추천</title>
+  <title>AgriNexus 맞춤 추천 + 작물 변경 알림</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; background: #f4f9fc; padding: 2rem; text-align: center; }
+    body { font-family: Arial; background: #f2f9f6; text-align: center; padding: 2rem; }
     input, button, select { width: 90%; max-width: 500px; padding: 0.8rem; font-size: 1rem; margin: 0.5rem; border-radius: 6px; border: 1px solid #ccc; }
-    .section { background: white; border-radius: 12px; padding: 1.5rem; margin: 1rem auto; max-width: 700px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    .section { background: white; padding: 1.5rem; border-radius: 12px; margin: 1rem auto; max-width: 700px; box-shadow: 0 0 10px rgba(0,0,0,0.08); }
   </style>
 </head>
 <body>
 
-  <h1>🌱 AgriNexus 피드백 학습 + 작물 추천 + 재배 계획</h1>
+  <h1>🌾 AgriNexus 추천 작물 알림 + 사용자 맞춤 추천</h1>
 
   <div class="section">
-    <h3>🔁 작물 예측 결과 피드백 제출</h3>
-    <select id="crop">
-      <option value="고추">고추</option>
-      <option value="배추">배추</option>
-      <option value="상추">상추</option>
-    </select>
-    <select id="feedback">
-      <option value="정확">정확</option>
-      <option value="부정확">부정확</option>
-    </select>
-    <button onclick="submitFeedback()">피드백 제출</button>
-    <div id="status" style="margin-top:1rem; color:#007c4d;"></div>
+    <h3>📢 추천 작물 변경 알림</h3>
+    <input id="userEmail" placeholder="📧 사용자 이메일" />
+    <button onclick="subscribeToAlerts()">알림 수신 등록</button>
+    <div id="alertStatus" style="margin-top:1rem; color:#007c4d;"></div>
   </div>
 
   <div class="section">
-    <h3>🌾 추천 작물 기반 재배 계획 자동 생성</h3>
-    <button onclick="generatePlan()">재배 계획 보기</button>
-    <div id="plan" style="margin-top:1rem; font-weight:bold;"></div>
+    <h3>🌿 사용자 선호 기반 모델 조정</h3>
+    고추 선호: <input type="range" min="0" max="1" step="0.1" id="pepperWeight" /><br/>
+    배추 선호: <input type="range" min="0" max="1" step="0.1" id="cabbageWeight" /><br/>
+    상추 선호: <input type="range" min="0" max="1" step="0.1" id="lettuceWeight" /><br/>
+    <button onclick="adjustModel()">모델 조정 저장</button>
+    <div id="adjustStatus" style="margin-top:1rem; color:#007c4d;"></div>
   </div>
 
   <script>
@@ -47,31 +42,23 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    async function submitFeedback() {
-      const crop = document.getElementById("crop").value;
-      const feedback = document.getElementById("feedback").value;
-
-      const res = await fetch("https://us-central1-your-project.cloudfunctions.net/processFeedback", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ crop, feedback, time: new Date().toISOString() })
-      });
-      const data = await res.json();
-      document.getElementById("status").innerText = "✅ " + data.status;
+    function subscribeToAlerts() {
+      const email = document.getElementById("userEmail").value;
+      db.ref("subscribers").push({ email, subscribedAt: new Date().toISOString() });
+      document.getElementById("alertStatus").innerText = "✅ 작물 변경 알림 수신 등록 완료!";
     }
 
-    function generatePlan() {
-      db.ref("feedbackSummary").once("value").then(snapshot => {
-        const data = snapshot.val() || {};
-        const mostRecommended = Object.entries(data).sort((a, b) => b[1] - a[1])[0];
-        const crop = mostRecommended ? mostRecommended[0] : "고추";
-        const plan = {
-          고추: "3월 파종, 5월 정식, 7~10월 수확, 배수 관리 철저",
-          배추: "8월 파종, 9월 정식, 10~11월 수확, 저온 관리 필요",
-          상추: "4~6월 파종, 6~8월 수확, 햇빛과 수분 조절"
-        };
-        document.getElementById("plan").innerText = `🌿 추천 작물: ${crop} → 재배 계획: ${plan[crop]}`;
+    function adjustModel() {
+      const pepper = parseFloat(document.getElementById("pepperWeight").value);
+      const cabbage = parseFloat(document.getElementById("cabbageWeight").value);
+      const lettuce = parseFloat(document.getElementById("lettuceWeight").value);
+      db.ref("userPreferences").push({
+        pepperWeight: pepper,
+        cabbageWeight: cabbage,
+        lettuceWeight: lettuce,
+        updatedAt: new Date().toISOString()
       });
+      document.getElementById("adjustStatus").innerText = "✅ 모델 선호 조정 저장 완료!";
     }
   </script>
 
